fix: dark mode , h5 login

--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -7,18 +7,9 @@ page,
 body {
   font: $fg-f28 $font-family 1.6;
   color: --color(--qui-FC-333);
-  background-color: --color(--qui-BG-2);
+  background-color: --color(--qui-BG-1);
+  width: 100%;
 }
-// .qq-emotion {
-//   display: inline-block;
-//   width: 28rpx;
-//   height: 28rpx;
-// max-width: 100%;
-// max-height: 100%;
-// vertical-align: middle;
-// height: auto!important;
-// width: auto!important;
-// }
 
 //小程序原生组件--修改
 //多选框
